# sigalg

./: LICENSE  README.md  pyproject.toml
sigalg/: __init__.py
sigalg/StochasticProcesses/: SecondOrderMarkovChain.py  transform_discrete_process.py
sigmahaus/StochasticProcesses/: DiscreteIID.py  DiscreteTimeStochasticProcess.py  FirstOrderMarkovChain.py  MarkovChain.py  SecondOrderMarkovChain.py  StochasticProcess.py  ThreeWinStreakSelectionStrategy.py  TransformedDiscreteTimeStochasticProcess.py  TwoStateMarkovChain.py  TwoStateSecondOrderMarkovChain.py  __init__.py  conditional_exp.py
sigmahaus/Utilities/: print_html_df.py
src/sigalg.egg-info/: PKG-INFO  SOURCES.txt
src/sigalg/StochasticProcesses/: ContinuousTimeStochasticProcess.py  DiscreteIID.py  DiscreteTimeStochasticProcess.py  DiscreteTimeStochasticProcessWithProb.py  FirstOrderMarkovChain.py  MarkovChain.py  SecondOrderMarkovChain.py  TransformedDiscreteTimeStochasticProcess.py  __init__.py  conditional_exp.py  continuous_time_stochastic_process.py  discrete_iid.py  discrete_time_stochastic_process.py  discrete_time_stochastic_process_with_prob.py  first_order_markov_chain.py  markov_chain.py  second_order_markov_chain.py  stochastic_process.py  transform_discrete_process.py  transformed_discrete_time_stochastic_process.py
src/sigalg/Utilities/: __init__.py
