[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sigalg"
version = "0.1.0"
description = "later"
readme = "README.md"
authors = [{ name = "John Myers" }]
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = ["numpy", "pandas", "matplotlib"]

[project.urls]
Homepage = "https://github.com/johnmyers/sigalg"

[tool.setuptools.packages.find]
where = ["src"]
